Fixed Extra Space

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,8 @@ img {
   .container {
       padding: 7rem 1rem 0 1rem;
   }
-  .container.about {
-      margin-top: -5rem;
+  .container.home {
+    min-height: auto;
   }
   .title h1 {
       font-size: 2.5rem;
